syntax = "proto3";

package api.v1;

option go_package = "github.com/synnaxlabs/synnax/pkg/api/grpc/v1";

service AuthLoginService {
    rpc Exec(LoginRequest) returns (LoginResponse);
}

message ClusterInfo {
    string cluster_key = 1;
    string node_version = 2;
    uint32 node_key = 3;
    int64 node_time = 4;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    User user = 2;
    ClusterInfo cluster_info = 3;
}

message User {
    string key = 1;
    string username = 2;
}
